toolchain/internal/core/analysis/testdata/errors/duplicates/duplicate_const.vdl
// @expect: E803

const MAX_SIZE = 100
const MAX_SIZE = 200
